# rescrobbled

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config_template.toml  flake.nix  rescrobbled.service  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fmt.yml  release.yml
filter-script-examples/: basic.py  ignore_artists.py  ignore_genre.py  parse_artist_from_title.py  shell_example.sh  simple.py
src/: auth.rs  cache.rs  config.rs  filter.rs  main.rs  mainloop.rs  player.rs  retry_timer.rs  service.rs  track.rs
src/config/: secrets.rs
src/connection/: connection.rs  lastfm.rs  listenbrainz.rs  mod.rs
src/service/: lastfm.rs  listenbrainz.rs  mod.rs  service.rs
tests/: secret
