[package]
name = "rescrobbled"
version = "0.7.1"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/InputUsername/rescrobbled.git"
homepage = "https://github.com/InputUsername/rescrobbled"
readme = "README.md"
description = "MPRIS music scrobbler daemon"
keywords = ["mpris", "music", "scrobble", "daemon"]
categories = ["multimedia", "command-line-utilities"]
publish = false

[dependencies]
mpris = "2.0.1"
rustfm-scrobble-proxy = "2.0.0"
listenbrainz = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
dirs = "5.0.1"
anyhow = "1.0.97"
rpassword = "7.3.1"

[dev-dependencies]
tempfile = "3.10.1"
