[package]
name = "rescrobbled"
version = "0.8.0"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/InputUsername/rescrobbled.git"
homepage = "https://github.com/InputUsername/rescrobbled"
readme = "README.md"
description = "MPRIS music scrobbler daemon"
keywords = ["mpris", "music", "scrobble", "daemon"]
categories = ["multimedia", "command-line-utilities"]
publish = false

[dependencies]
mpris = "2.0.1"
rustfm-scrobble-proxy = "2.0.0"
listenbrainz = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
dirs = "6.0.0"
anyhow = "1.0.99"
rpassword = "7.4.0"

[dev-dependencies]
tempfile = "3.20.0"
