[package]
name = "rescrobbled"
version = "0.9.0"
authors = ["Koen Bolhuis <koen.bolhuis@gmail.com>"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/InputUsername/rescrobbled.git"
homepage = "https://github.com/InputUsername/rescrobbled"
readme = "README.md"
description = "MPRIS music scrobbler daemon"
keywords = ["mpris", "music", "scrobble", "daemon"]
categories = ["multimedia", "command-line-utilities"]
publish = false

[profile.release]
strip = true

[dependencies]
mpris = "2.0.1"
rustfm-scrobble-proxy = "2.0.1"
listenbrainz = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"
anyhow = "1.0.102"
rpassword = "7.4.0"

[dev-dependencies]
tempfile = "3.27.0"
